# ollama-telemetry

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/ollama_telemetry/: __init__.py  api.py  cli.py  context.py  events.py  privacy.py  sqlite_sink.py
src/ollama_telemetry/integrations/: __init__.py  langchain.py
tests/: test_cli.py  test_privacy.py  test_sqlite.py  test_tracing.py
